Cards are not showing up correctly on step 3

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -105,7 +105,7 @@
 .image:after{
   content:'';
   display: block;
-  padding-bottom: 70%;
+  padding-bottom: 67%;
 }
 .svgImage {
 }
